--- a/back/src/main/resources/messages.properties
+++ b/back/src/main/resources/messages.properties
@@ -1,6 +1,11 @@
 entity.not_found=Entity not found. ID: {0}
 entity.cannot_delete=Cannot delete. ID: {0}. Reason: {1}
+entity.not_found_or_inactive=Related entity with ID: {0} is invalid (does not exist or is not active).
 request.invalid.blank=Field cannot be null, blank or whitespaces.
 request.invalid.null=Field cannot be nul.
 request.invalid.email=Email format invalid.
 request.invalid.phone=Phone format invalid. Must be 10 digits.
+request.invalid.id_min=The ID value must be greater than 0.
+request.invalid.mileage=The mileage value must be positive.
+request.invalid.max_size=The value entered exceeds the maximum allowed
+request.invalid.plate=Plate format invalid.
