feat(CU-86b14tygr) Add ServiceType endpoints

--- a/back/src/main/resources/messages.properties
+++ b/back/src/main/resources/messages.properties
@@ -4,3 +4,5 @@ request.invalid.blank=Field cannot be null, blank or whitespaces.
 request.invalid.null=Field cannot be nul.
 request.invalid.email=Email format invalid.
 request.invalid.phone=Phone format invalid. Must be 10 digits.
+request.invalid.min=Value must be at least {1}.
+request.invalid.size=Field cannot exceed {max} characters.
