feat(CU-86b18cx64): add base page, include header + sidebar

--- a/back/src/main/resources/messages.properties
+++ b/back/src/main/resources/messages.properties
@@ -7,5 +7,6 @@ request.invalid.email=Email format invalid.
 request.invalid.phone=Phone format invalid. Must be 10 digits.
 request.invalid.id_min=The ID value must be greater than 0.
 request.invalid.mileage=The mileage value must be positive.
-request.invalid.max_size=The value entered exceeds the maximum allowed
+request.invalid.max_size=The value entered exceeds the maximum allowed.
 request.invalid.plate=Plate format invalid.
+entity.cannot_delete_service=Cannot delete entity with ID {0} (has active services).
