feat(CU-86b14ty5d) add Pay endpoint

--- a/back/src/main/resources/messages.properties
+++ b/back/src/main/resources/messages.properties
@@ -15,3 +15,5 @@ entity.cannot_delete_related_entities=Cannot delete entity with ID {0} (has rela
 database.error=An error has occurred when trying to persist the information in the database.
 request.invalid.amount=The amount value must be positive.
 request.invalid.price=The price value must be positive.
+request.invalid.date=The date must be in the past or present.
+
