feat(CU-86b14ty71): add client endpoints and implement related services

--- a/back/src/main/resources/messages.properties
+++ b/back/src/main/resources/messages.properties
@@ -2,11 +2,14 @@ entity.not_found=Entity not found. ID: {0}
 entity.cannot_delete=Cannot delete. ID: {0}. Reason: {1}
 entity.not_found_or_inactive=Related entity with ID: {0} is invalid (does not exist or is not active).
 request.invalid.blank=Field cannot be null, blank or whitespaces.
+request.invalid.blank_nullable=Field cannot be blank or whitespaces.
 request.invalid.null=Field cannot be null.
 request.invalid.email=Email format invalid.
 request.invalid.phone=Phone format invalid. Must be 10 digits.
 request.invalid.id_min=The ID value must be greater than 0.
 request.invalid.mileage=The mileage value must be positive.
+request.invalid.positive=The value entered must be positive.
 request.invalid.max_size=The value entered exceeds the maximum allowed.
 request.invalid.plate=Plate format invalid.
-entity.cannot_delete_service=Cannot delete entity with ID {0} (has active services).
+entity.cannot_delete_related_entities=Cannot delete entity with ID {0} (has related entity/entities active(s)).
+database.error=An error has occurred when trying to persist the information in the database
