feat(CU-86b14tyfc) Add Inventory endpoints

--- a/back/src/main/resources/messages.properties
+++ b/back/src/main/resources/messages.properties
@@ -12,4 +12,6 @@ request.invalid.positive=The value entered must be positive.
 request.invalid.max_size=The value entered exceeds the maximum allowed.
 request.invalid.plate=Plate format invalid.
 entity.cannot_delete_related_entities=Cannot delete entity with ID {0} (has related entity/entities active(s)).
-database.error=An error has occurred when trying to persist the information in the database
+database.error=An error has occurred when trying to persist the information in the database.
+request.invalid.amount=The amount value must be positive.
+request.invalid.price=The price value must be positive.
