feat(CU-86b14tyw6): added isDeleted atribute to Employee, created new exceptions for login and register

--- a/back/src/main/resources/messages.properties
+++ b/back/src/main/resources/messages.properties
@@ -1,6 +1,10 @@
 entity.not_found=Entity not found. ID: {0}
 entity.cannot_delete=Cannot delete. ID: {0}. Reason: {1}
 entity.not_found_or_inactive=Related entity with ID: {0} is invalid (does not exist or is not active).
+email.already_registered=Email already registered: {0}
+identificacion_number.already_registered=Identification number already registered: {0}
+user.not_found=User not found: {0}
+user.inactive=User inactive: {0}
 request.invalid.blank=Field cannot be null, blank or whitespaces.
 request.invalid.blank_nullable=Field cannot be blank or whitespaces.
 request.invalid.null=Field cannot be null.
