--- a/back/src/main/resources/messages.properties
+++ b/back/src/main/resources/messages.properties
@@ -20,4 +20,5 @@ database.error=An error has occurred when trying to persist the information in t
 request.invalid.amount=The amount value must be positive.
 request.invalid.price=The price value must be positive.
 request.invalid.date=The date must be in the past or present.
+login.bad_credentials=User or/and password invalid.
 
